Fix layout issue

--- a/src/less/05-templates/base.less
+++ b/src/less/05-templates/base.less
@@ -227,6 +227,7 @@
 
   .page-text {
     flex: 7;
+    max-width: 100%;
 
     .no-flexwrap & {
       margin-left: 0;
